# veritas

./: .gitignore  README.md  pyproject.toml  run-demo.sh
benchmark/: bench.py
benchmark/bugs/: bug_0001_rate_selection.json
docs/: grounded-debug.md  observation-first.md
samples/checkout-demo/src/main/java/com/example/: Main.java
samples/checkout-demo/src/main/java/com/example/config/: PropertyResolver.java
samples/checkout-demo/src/main/java/com/example/shipping/: Breakdown.java  Rate.java  RateSelector.java
samples/config/: application-staging.properties
samples/traces/: rate_staging.json
tests/: test_capture_v02.py  test_join.py  test_observe.py
veritas/: __init__.py  anchors.py  cli.py  join.py  mcp_server.py  mechanism.py  models.py  predicates.py  render.py  stores.py  workspace.py
veritas-agent/: pom.xml
veritas-agent/src/main/java/io/veritas/agent/: ConfigAdvice.java  MethodAdvice.java  Recorder.java  Redactor.java  TraceWriter.java  ValueExtractor.java  VeritasAgent.java
veritas/observe/: __init__.py  coupling.py  diff.py  facts.py  label.py  ledger.py  pipeline.py  variance.py
