[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veritas"
version = "0.1.0"
description = "The divergence engine — execution verdicts for AI coding agents."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Veritas"}]
dependencies = []                # stdlib only — the join engine has zero runtime deps

[project.scripts]
veritas = "veritas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["veritas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
